# SillyTech-Temporary

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  SillyTech3D.cbp  SillyTech3D.layout  SillyTech3D.sln  cmake_install.cmake
Libraries/PhysX/lib/: PhysX3CharacterKinematicDEBUG_x86.lib  PhysX3DEBUG_x86.exp  PhysXProfileSDKDEBUG.lib  PhysXVisualDebuggerSDKDEBUG.lib
Libraries/Windows/x86/: LowLevelClothDEBUG.lib  PhysX3CharacterKinematicDEBUG_x86.exp  PhysX3CommonDEBUG_x86.exp  PhysX3CommonDEBUG_x86.lib  PhysX3CookingDEBUG_x86.exp  PhysX3CookingDEBUG_x86.lib  PhysX3DEBUG_x86.lib  PxTaskDEBUG.lib  SceneQueryDEBUG.lib  alut.lib  lua.debug.idb  lua.debug.lib
Libraries/glew-1.9.0/lib/: glew32d.exp  glew32d.lib  glew32sd.lib
Libraries/luabind/x86/Debug/: luabind.debug.idb
SillyTech3D/: CMakeLists.txt  Main.cpp  Makefile  MeshComponent.h  SillyTech3D.vcxproj  SillyTech3D.vcxproj.filters  actor.cpp  actor.h  actor_factory.h  actor_manager.h  audio_feature.h  audio_manager.cpp  bounding_box.cpp  cmake_install.cmake  collider.cpp  collider.h  component.h  debug.cpp  feature.cpp  game_engine.h  game_feature.h  game_server.cpp  gl_graphics_system.h  graphics_feature.cpp  graphics_feature.h  gui_manager.cpp  input_feature.h  input_manager.cpp  lua_garbage.h  lua_glue.cpp  lua_script_component.cpp  lua_script_res.h  manager.cpp  manager.h  material.h  material_res.cpp  mesh.cpp  mesh.h  mesh_render_component.cpp  mesh_render_manager.cpp  (+20 more)
SillyTech3D/Debug/SillyTech3D.tlog/: CL.command.1.tlog  CL.write.1.tlog  SillyTech3D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SillyTech3D/Release/SillyTech3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SillyTech3D.lastbuildstate
SillyTech3D/Resources/: camera.lua  car.lua  init.lua  test.lua  thing.lua  tidus_move.lua
SillyTech3D/Resources/Heightmap/: Heightmap.mtl
SillyTech3D/Resources/Model/DodgeViper/: dodge-viper-gts.mtl
SillyTech3D/Resources/Model/Ferrari/: ferrari-f1-race-car.mtl
SillyTech3D/Resources/Model/Ferrari2/: calebs-f1-race-car.mtl
SillyTech3D/Resources/Model/House/: paa-fbx-good-021.mtl
SillyTech3D/Resources/Model/Junction/: junction.max
SillyTech3D/Resources/Model/MyTerrain/: Terrain.mtl
SillyTech3D/Resources/STShaders/: Common.fsh  Common.vsh  DefaultShader.fs  DefaultShader.vs  Functions.fsh  LESMEG.txt  Lights.fsh  Phong.fsh
SillyTech3D/Resources/Shaders/: default_postprocess.fs  default_postprocess.vs  default_shader.fs  default_shader.gs  default_shader.vs
SillyTech3D/Resources/Skybox/: Skybox.mtl
SillyTech3D/Resources/tidus/: model.max  model.mtl
SillyTech3D/src/: DebugLog.txt  Main.cpp  ShaderError.txt  actor_factory.cpp  audio_feature.cpp  audio_manager.h  audio_res.h  bounding_box.h  bounding_box_factory.h  camera_component.h  camera_manager.h  core_events.cpp  core_events.h  debug.h  display.h  editor_gui.cpp  editor_gui.h  exception_handler.cpp  exception_handler.h  feature.h  game_engine.cpp  game_feature.cpp  gl_display.cpp  gl_display.h  gui_manager.h  input_feature.cpp  lua_glue.h  material_res.h  mesh_data.cpp  mesh_render_manager.h  mesh_res.h  physics_manager.h  post_process_settings.cpp  resource.cpp  script_component.h  script_feature.cpp  script_feature.h  script_helper.h  shader.cpp  shader_res.h  (+3 more)
SillyTech3D/src/Actor/: actor.cpp  actor.h
SillyTech3D/src/Common/Debugging/: debug.h  memory_manager.cpp  memory_manager.h
SillyTech3D/src/Common/Interfaces/: core_events.cpp  core_events.h
SillyTech3D/src/Common/Macro/: feature_fwd_decl.h  unsafe_singleton.h
SillyTech3D/src/Components/: audio_component.cpp  audio_component.h  camera_component.cpp  camera_component.h  component.cpp  component.h  light_component.cpp  light_component.h  lua_script_component.cpp  lua_script_component.h  mesh_render_component.cpp  mesh_render_component.h  physics_component.cpp  physics_component.h  script_component.cpp  script_component.h
SillyTech3D/src/Editor/: EditorFunctions.h
SillyTech3D/src/Engine/: game_engine.cpp  game_engine.h  game_server.cpp  game_server.h
SillyTech3D/src/Factories/: actor_factory.cpp  actor_factory.h  bounding_box_factory.cpp  texture_factory.cpp
SillyTech3D/src/Features/: audio_feature.cpp  audio_feature.h  feature.cpp  feature.h  game_feature.cpp  game_feature.h  graphics_feature.cpp  graphics_feature.h  input_feature.cpp  input_feature.h  networking_feature.cpp  networking_feature.h  physics_feature.cpp  physics_feature.h  script_feature.cpp  script_feature.h
SillyTech3D/src/FileIO/: shader_reader.cpp  shader_reader.h  text_file_reader.h
SillyTech3D/src/GUI/: editor_gui.cpp  editor_gui.h
SillyTech3D/src/Geometry/: transform.cpp  transform.h
SillyTech3D/src/Graphics/: gl_display.cpp  gl_display.h  gl_graphics_system.cpp  gl_graphics_system.h  graphics_system.h  shader.cpp  shader.h  shader_program.cpp  viewport.cpp  viewport.h
SillyTech3D/src/Managers/: actor_manager.cpp  actor_manager.h  audio_manager.cpp  audio_manager.h  camera_manager.cpp  camera_manager.h  gui_manager.cpp  gui_manager.h  input_manager.cpp  input_manager.h  lua_script_manager.cpp  lua_script_manager.h  manager.cpp  manager.h  mesh_render_manager.cpp  mesh_render_manager.h  physics_manager.cpp  physics_manager.h  replication_manager.cpp  replication_manager.h  time_manager.cpp  time_manager.h
SillyTech3D/src/Model/: material.cpp  material.h  mesh.h  mesh_data.h  texture.cpp  texture.h
SillyTech3D/src/Networking/: client_connection.cpp  client_connection.h  net_message.cpp  net_message.h  net_message_type.cpp  net_message_type.h  replication.h  replication_types.h  server_connection.cpp  server_connection.h  tcp_connection.cpp  tcp_connectionk.h
SillyTech3D/src/Resources/: audio_res.cpp  lua_script_res.cpp  mesh_res.cpp  shader_res.cpp
SillyTech3D/src/Scripting/: lua_glue.cpp  lua_glue.h  script_helper.cpp  script_helper.h
SillyTech3D/src/Threading/: st_thread.cpp  st_thread.h
SillyTech3D/src/Tools/: timer.cpp  timer.h
